# coDrive

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  body.json  docker-compose.yml  package-lock.json
mobile-client/: .env.example  .gitignore  README.md  app.json  jsconfig.json  metro.config.js  package-lock.json  package.json  tsconfig.json
mobile-client/app/: _layout.jsx  _layout.tsx  index.jsx
mobile-client/app/(auth)/: login.jsx  login.tsx  register.jsx  register.tsx
mobile-client/app/(tabs)/: _layout.jsx  drive.jsx  files.jsx  index.jsx  shared.jsx  starred.jsx  trash.jsx
mobile-client/components/: Breadcrumbs.jsx  DriveHeader.jsx  FileActionsModal.jsx  FileItem.jsx  FileItemGrid.jsx  FileViewer.jsx  FloatingActionButton.jsx  FormComponents.jsx  InputModal.jsx  KeyboardAvoidingWrapper.jsx  ProfileModal.jsx  ScreenWrapper.jsx  ShareModal.jsx  SideDrawer.jsx  external-link.jsx  parallax-scroll-view.jsx  themed-text.jsx  themed-view.jsx
mobile-client/components/ui/: icon-symbol.jsx
mobile-client/constants/: appStyles.js  theme.js
mobile-client/context/: AuthContext.jsx  AuthContext.tsx  ThemeContext.jsx
mobile-client/services/: api.js  api.ts  filesService.js  logger.js  useApiHooks.js  validators.js  validators.ts
mobile-client/utils/: helpers.js
src/: Application.cpp  Application.h  CommandParser.cpp  CommandParser.h  ConcreteCommands.h  FileManager.cpp  FileManager.h  ICommand.h  RLECompressor.cpp  RLECompressor.h  RLEDecompressor.cpp  RLEDecompressor.h  main.cpp
src/Client/: Client.cpp  Client.h  Client.py  mainClient.cpp
src/Server/: ClientHandler.cpp  ClientHandler.h  ThreadPool.cpp  ThreadPool.h  server.cpp
src/commands/: AddArticleCommand.cpp  AddArticleCommand.h  DeleteArticleCommand.cpp  DeleteArticleCommand.h  GetArticleCommand.cpp  GetArticleCommand.h  InvalidCommand.cpp  InvalidCommand.h  SearchArticleCommand.cpp  SearchArticleCommand.h
src/server/: ClientHandler.cpp  ClientHandler.h  server.cpp
tests/: ApplicationTest.cpp  CLIParserTest.cpp  CMakeLists.txt  Dockerfile  RLETest.cpp
web-client/: .dockerignore  package-lock.json  package.json
web-client/public/: index.html
web-client/src/: App.css  App.js  index.css
web-client/src/components/auth/: ProtectedRoute.jsx
web-client/src/components/drive/: FileCard.jsx  FileGrid.jsx  FileViewer.jsx  ShareModal.jsx  drive.css
web-client/src/components/layout/: AppLayout.jsx  SideMenu.css  SideMenu.jsx  TopBar.css  TopBar.jsx
web-client/src/pages/: DrivePage.jsx  LoginPage.jsx  RecentPage.jsx  RegisterPage.jsx  SharedPage.jsx  StarredPage.jsx  TrashPage.jsx
web-client/src/services/: api.js  authService.js  filesService.js
web-server/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  server.js
web-server/config/: db.js
web-server/controllers/: README.md  authController.js  filesController.js  healthController.js  searchController.js  userController.js
web-server/middleware/: authMiddleware.js  errorMiddleware.js  upload.js
web-server/models/: README.md  fileSystem.model.js  user.model.js
web-server/routes/: README.md  files.routes.js  health.routes.js  index.js  search.js  token.routes.js  user.routes.js
web-server/services/: cppServerClient.js  tcpClient.js
wiki/: README.md  environment-setup.md  mobile-client.md  run-all-services.md
